Issue #2272761: Fixed wsod in version 2.4-beta1, due to dpm() leftover in tokens.inc.
Issue #2276149: Fixed 'wid' value in Views Export of filter 'Workflow current: Current state' in workflow_views_handler_filter_sid.
Issue #2263561: Added Entity properties + tokens.
Issue #2277751: Added Field Properties for workflow_field.
Issue #2265615: Added Rules Action 'Set a workflow field state' for any entity.
Issue #2277935: Fixed message 'Wrong call to constructor' when rebuilding permission with workflow_access enabled.
Issue #2196247: Added machine_names for WorkflowStates.
Issue #2217291: Removed warnings from workflow_views, when another module was rudely disabled.
Issue #2279241: Fixed json_encode() error by making $workflow property protected.
Issue #2279677: Fixed Notice 'Undefined property: $title in WorkflowScheduledTransition->save()'.
Issue #2279967: Fixed Wrong default value for ScheduledTransition widget.
Issue #2282969: Added help text on Workflows page, to tell user how to use Workflow Field.
Issue #2285327: Fixed wrong function call in VBO action 'Set to next state'.
Issue #2277751 by barami: Added $property['options list'] to Workflow Field.
Issue #1511694 by joel_osc: Added integration of WorkflowNode with Panels.
Issue #2187731 by boris sondagh: Added Panels access/selection rules based on workflow.
Issue #2152435: Prepared WorkflowField Features export for better import when wid changed in target system.
Issue #2287057: Fixed usage of actual $user instead of global $user for Transition.
Issue #2287057: Fixed undefined variable $workflow_id in workflow.module.
Issue #2283821: Fixed error in hook_update_7007() due to schema changes, when Upgrading from old D6/D7-version to 7.x-2.x.
Issue #2283821: Fixed error in workflow_node, when Upgrading from old D6/D7-version to 7.x-2.x.
Issue #2291411: Fixed broken link on Admin UI.
Issue #2217855: Fixed fatal error in workflow_actions when ConfigTransition has invalid target_state.